updated integration tests
git-svn-id: http://source.gemini.edu/software/giapi/giapi-osgi/branches/gmp-ng@66780 ee6ba543-07f8-4773-b02c-01d50e9d00ba