@@ -9,8 +9,8 @@ import edu.gemini.aspen.giapi.data.DataLabel;
 import edu.gemini.aspen.giapi.data.ObservationEvent;
 import edu.gemini.aspen.giapi.data.ObservationEventHandler;
 import org.junit.Before;
+import org.ops4j.pax.exam.Configuration;
 import org.ops4j.pax.exam.Option;
-import org.ops4j.pax.exam.junit.Configuration;
 import org.ops4j.pax.exam.options.WrappedUrlProvisionOption;
 
 import java.io.File;
@@ -22,7 +22,6 @@ import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
 import static org.ops4j.pax.exam.CoreOptions.*;
-import static org.ops4j.pax.exam.container.def.PaxRunnerOptions.vmOption;
 import static scala.collection.JavaConversions.seqAsJavaList;
 
 /**
@@ -47,11 +46,11 @@ public class GDSIntegrationBase extends FelixContainerConfigurationBase {
     }
 
     @Configuration
-    public static Option[] gdsBundles() {
-        return options(
-                vmOption("-Xverify:none "),
+    public Option[] gdsBundles() {
+        return concatenate(super.baseContainerConfig(), options(
                 systemProperty("org.osgi.service.http.port").value("9999"),
                 mavenBundle().artifactId("giapi").groupId("edu.gemini.aspen").versionAsInProject(),
+                mavenBundle().artifactId("giapi-jms-util").groupId("edu.gemini.aspen").versionAsInProject(),
                 mavenBundle().artifactId("fits").groupId("edu.gemini.external.osgi.nom.tam").versionAsInProject(),
                 mavenBundle().artifactId("scala-library").groupId("org.scala-lang").versionAsInProject(),
                 mavenBundle().artifactId("scala-actors").groupId("org.scala-lang").versionAsInProject(),
@@ -65,15 +64,18 @@ public class GDSIntegrationBase extends FelixContainerConfigurationBase {
                 mavenBundle().artifactId("joda-time").groupId("joda-time").versionAsInProject(),
                 mavenBundle().artifactId("gds-observation-state-publisher").groupId("edu.gemini.aspen.gds").versionAsInProject(),
                 mavenBundle().artifactId("gds-obsevent-handler").groupId("edu.gemini.aspen.gds").versionAsInProject(),
-                mavenBundle().artifactId("org.apache.felix.eventadmin").groupId("org.apache.felix").versionAsInProject(),
-                mavenBundle().artifactId("org.apache.felix.ipojo.handler.eventadmin").groupId("org.apache.felix").versionAsInProject(),
                 mavenBundle().artifactId("pax-web-jetty-bundle").groupId("org.ops4j.pax.web").versionAsInProject(),
                 mavenBundle().artifactId("pax-web-extender-whiteboard").groupId("org.ops4j.pax.web").versionAsInProject(),
                 mavenBundle().artifactId("pax-web-spi").groupId("org.ops4j.pax.web").versionAsInProject(),
+                mavenBundle().artifactId("pax-web-api").groupId("org.ops4j.pax.web").versionAsInProject(),
+                mavenBundle().artifactId("xbean-finder").groupId("org.apache.xbean").versionAsInProject(),
+                mavenBundle().artifactId("xbean-bundleutils").groupId("org.apache.xbean").versionAsInProject(),
+                mavenBundle().artifactId("asm").groupId("org.ow2.asm").versionAsInProject(),
+                mavenBundle().artifactId("asm-commons").groupId("org.ow2.asm").versionAsInProject(),
+                mavenBundle().artifactId("asm-debug-all").groupId("org.ow2.asm").versionAsInProject(),
                 mavenBundle().artifactId("ecj").groupId("edu.gemini.external.osgi.org.eclipse.jdt.core.compiler").versionAsInProject(),
-                wrappedBundle(mavenBundle().artifactId("casdb").groupId("edu.gemini.cas").versionAsInProject()).overwriteManifest(WrappedUrlProvisionOption.OverwriteMode.FULL),
-                mavenBundle().artifactId("org.osgi.compendium").groupId("org.osgi").versionAsInProject()
-         );
+                wrappedBundle(mavenBundle().artifactId("casdb").groupId("edu.gemini.cas").versionAsInProject()).overwriteManifest(WrappedUrlProvisionOption.OverwriteMode.FULL)
+         ));
     }
 
     @Override
